--- a/style.css
+++ b/style.css
@@ -40,10 +40,11 @@ body {
 #cookie {
     transform: rotate(0deg);
     animation: rotate 40s linear infinite;
+    width: 55%;
 }
 
 #cookie:active {
-    width: 55vh;
+    width: 58%;
 }
 
 @keyframes rotate {
@@ -57,7 +58,7 @@ body {
 }
 
 
-@media(max-width: 650px) {
+@media(max-width: 450px) {
 
     .title h1 {
         font-size: 2em;
