--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Overpass', sans-serif;
-    background-color: rgb(199, 104, 104);
+    background-color: #ffe7bc;
 }
 
 /* MAIN SECTION */
